welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:9: error: not found: value nbPAs
    for (j<-1 to nbPAs){
                 ^